--- a/android/build.gradle
+++ b/android/build.gradle
@@ -60,7 +60,9 @@ android {
 repositories {
   mavenCentral()
   google()
-
+  maven {
+     url("https://artifactory-external.vkpartner.ru/artifactory/maven")
+  }
   def found = false
   def defaultDir = null
   def androidSourcesName = 'React Native sources'
@@ -132,6 +134,7 @@ def kotlin_version = getExtOrDefault('kotlinVersion')
 dependencies {
     //noinspection GradleDynamicVersion
   implementation "com.facebook.react:react-native:+"
+  implementation("ru.rustore.sdk:billingclient:0.1.1")
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 // From node_modules
 }
