--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "test",
   "main": "./lib/module/index.js",
   "module": "./lib/module/index.js",
-  "types": "./lib/typescript/types.d.ts",
+  "types": "./lib/typescript/index.d.ts",
   "react-native": "src/index.ts",
   "files": [
     "lib",
