--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "types": "./lib/typescript/index.d.ts",
   "files": [
     "lib",
+    "plugin",
+    "app.plugin.js",
     "android",
     "ios",
     "cpp",
