--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@somersets/react-native-rustore-iap",
-  "version": "0.7.7",
+  "version": "0.7.8",
   "description": "test",
   "main": "./lib/module/index.js",
   "module": "./lib/module/index.js",
   "types": "./lib/typescript/index.d.ts",
   "files": [
     "lib",
-    "plugin",
+    "plugin/build",
     "app.plugin.js",
     "android",
     "ios",
