chore: upd npmrc

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
-registry=https://npm.pkg.github.com/somersets
-registry=https://registry.npmjs.org
+@somersets:registry=https://npm.pkg.github.com
+@devsomersets:registry=https://registry.npmjs.org
+
