--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@devsomersets/react-native-rustore-iap",
+  "name": "@somersets/react-native-rustore-iap",
   "version": "1.1.0",
   "description": "test",
   "main": "./lib/module/index.js",
@@ -23,7 +23,7 @@
   "scripts": {
     "test": "jest",
     "typescript": "tsc --noEmit",
-    "lint": "eslint \"**/*.{js,ts,tsx}\"",
+    "lint": "eslint \"**/*.{ts,tsx}\"",
     "prepare": "bob build",
     "npmRelease": "standard-version && git push && npm publish",
     "release": "release-it",
