--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 @somersets:registry=https://npm.pkg.github.com
-@devsomersets:registry=https://registry.npmjs.org
+@somersets:registry=https://registry.npmjs.org
 
